Add search fields

--- a/itables/html/datatables_template_connected.html
+++ b/itables/html/datatables_template_connected.html
@@ -16,6 +16,22 @@
 
     $(document).ready(function () {
         // [pre-dt-code]
-        $('#table_id').DataTable(dt_args);
+        // $('#table_id').DataTable(dt_args);
+        $('#table_id thead th').each( function () {
+            var title = $('#table_id thead th').eq( $(this).index() ).text();
+            $(this).html( '<input type="text" placeholder="Search '+title+'" />' );
+        } );
+
+        var table = $('#table_id').DataTable(dt_args);
+
+        // Apply the search
+        table.columns().eq( 0 ).each( function ( colIdx ) {
+            $( 'input', table.column( colIdx ).header() ).on( 'keyup change', function () {
+                table
+                    .column( colIdx )
+                    .search( this.value )
+                    .draw();
+            } );
+        } );
     });
 </script>
