--- a/itables/html/itables_render.html
+++ b/itables/html/itables_render.html
@@ -1,7 +1,24 @@
 <script type="module">
   window.__itables_render = async (table_id, dt_args) => {
     await initializeDataTables();
-    $(table_id).DataTable(dt_args);
+    // $(table_id).DataTable(dt_args);
+    // Setup - add a text input to each footer cell
+    $('#table_id thead th').each( function () {
+      var title = $('#table_id thead th').eq( $(this).index() ).text();
+      $(this).html( '<input type="text" placeholder="Search '+title+'" />' );
+    } );
+
+    var table = $('#table_id').DataTable(dt_args);
+
+    // Apply the search
+    table.columns().eq( 0 ).each( function ( colIdx ) {
+        $( 'input', table.column( colIdx ).header() ).on( 'keyup change', function () {
+            table
+                .column( colIdx )
+                .search( this.value )
+                .draw();
+        } );
+    } );
   };
 
   async function initializeDataTables() {
